// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-form default 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in action-fallouts default 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in action-fallouts focus first field with error 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in action-fallouts message summary and clear message summary 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in action-fallouts toast and clear toast 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in validators between 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <m-integerfield />
   
  <div
    class="m-datepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              aria-haspopup="true"
              autocomplete="off"
              id="mDatepicker-uuid"
              placeholder="AAAA-MM-JJ"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <button
              aria-controls="mDatepicker-uuid"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in validators compare 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <m-input-group />
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in validators email 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in validators max 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <m-integerfield />
   
  <div
    class="m-datepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              aria-haspopup="true"
              autocomplete="off"
              id="mDatepicker-uuid"
              placeholder="AAAA-MM-JJ"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <button
              aria-controls="mDatepicker-uuid"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in validators max-length 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in validators min 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <m-integerfield />
   
  <div
    class="m-datepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              aria-haspopup="true"
              autocomplete="off"
              id="mDatepicker-uuid"
              placeholder="AAAA-MM-JJ"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <button
              aria-controls="mDatepicker-uuid"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in validators min-length 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/built-in validators required 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/fields datepicker 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <div
    class="m-datepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-label m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <label
          class="m-input-style__label"
          for="mDatepicker-uuid"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Birthdate
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__body"
        >
          <!---->
           
          <div
            class="m-input-style__left-content"
          >
            <input
              aria-haspopup="true"
              autocomplete="off"
              id="mDatepicker-uuid"
              placeholder="AAAA-MM-JJ"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <button
              aria-controls="mDatepicker-uuid"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/rules Checkbox 2 to 5 selections 1`] = `
<div>
  <h2>
    Checkbox 2 to 5 selections
  </h2>
   
  <form
    class="m-u--margin-top"
  >
    <!---->
     
    <!---->
     
    <p>
      <strong>
        Select 2 to 5 roles :
      </strong>
    </p>
     
    <ul
      class="m-u--no-margin"
    >
      <m-input-group>
        <li>
          <div
            class="m-checkbox m--is-checkbox-left"
          >
            <input
              class="m-checkbox__hidden"
              id="mCheckbox-uuid"
              type="checkbox"
            />
             
            <!---->
             
            <label
              class="m-checkbox__wrap"
              for="mCheckbox-uuid"
            >
              <span
                aria-hidden="true"
                class="m-checkbox__input"
              >
                <span
                  class="m-checkbox__input__icon"
                />
              </span>
               
              <span
                class="m-checkbox__label"
              >
                
                            Sys admin
              </span>
            </label>
             
            <div
              class="m-validation-message m-checkbox__message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </li>
        <li>
          <div
            class="m-checkbox m--is-checkbox-left"
          >
            <input
              class="m-checkbox__hidden"
              id="mCheckbox-uuid"
              type="checkbox"
            />
             
            <!---->
             
            <label
              class="m-checkbox__wrap"
              for="mCheckbox-uuid"
            >
              <span
                aria-hidden="true"
                class="m-checkbox__input"
              >
                <span
                  class="m-checkbox__input__icon"
                />
              </span>
               
              <span
                class="m-checkbox__label"
              >
                
                            Unit admin
              </span>
            </label>
             
            <div
              class="m-validation-message m-checkbox__message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </li>
        <li>
          <div
            class="m-checkbox m--is-checkbox-left"
          >
            <input
              class="m-checkbox__hidden"
              id="mCheckbox-uuid"
              type="checkbox"
            />
             
            <!---->
             
            <label
              class="m-checkbox__wrap"
              for="mCheckbox-uuid"
            >
              <span
                aria-hidden="true"
                class="m-checkbox__input"
              >
                <span
                  class="m-checkbox__input__icon"
                />
              </span>
               
              <span
                class="m-checkbox__label"
              >
                
                            Conceptor
              </span>
            </label>
             
            <div
              class="m-validation-message m-checkbox__message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </li>
        <li>
          <div
            class="m-checkbox m--is-checkbox-left"
          >
            <input
              class="m-checkbox__hidden"
              id="mCheckbox-uuid"
              type="checkbox"
            />
             
            <!---->
             
            <label
              class="m-checkbox__wrap"
              for="mCheckbox-uuid"
            >
              <span
                aria-hidden="true"
                class="m-checkbox__input"
              >
                <span
                  class="m-checkbox__input__icon"
                />
              </span>
               
              <span
                class="m-checkbox__label"
              >
                
                            Assitant
              </span>
            </label>
             
            <div
              class="m-validation-message m-checkbox__message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </li>
        <li>
          <div
            class="m-checkbox m--is-checkbox-left"
          >
            <input
              class="m-checkbox__hidden"
              id="mCheckbox-uuid"
              type="checkbox"
            />
             
            <!---->
             
            <label
              class="m-checkbox__wrap"
              for="mCheckbox-uuid"
            >
              <span
                aria-hidden="true"
                class="m-checkbox__input"
              >
                <span
                  class="m-checkbox__input__icon"
                />
              </span>
               
              <span
                class="m-checkbox__label"
              >
                
                            Moderator
              </span>
            </label>
             
            <div
              class="m-validation-message m-checkbox__message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </li>
        <li>
          <div
            class="m-checkbox m--is-checkbox-left"
          >
            <input
              class="m-checkbox__hidden"
              id="mCheckbox-uuid"
              type="checkbox"
            />
             
            <!---->
             
            <label
              class="m-checkbox__wrap"
              for="mCheckbox-uuid"
            >
              <span
                aria-hidden="true"
                class="m-checkbox__input"
              >
                <span
                  class="m-checkbox__input__icon"
                />
              </span>
               
              <span
                class="m-checkbox__label"
              >
                
                            Student
              </span>
            </label>
             
            <div
              class="m-validation-message m-checkbox__message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </li>
        <li>
          <div
            class="m-checkbox m--is-checkbox-left"
          >
            <input
              class="m-checkbox__hidden"
              id="mCheckbox-uuid"
              type="checkbox"
            />
             
            <!---->
             
            <label
              class="m-checkbox__wrap"
              for="mCheckbox-uuid"
            >
              <span
                aria-hidden="true"
                class="m-checkbox__input"
              >
                <span
                  class="m-checkbox__input__icon"
                />
              </span>
               
              <span
                class="m-checkbox__label"
              >
                
                            Invited
              </span>
            </label>
             
            <div
              class="m-validation-message m-checkbox__message"
            >
              <!---->
               
              <!---->
            </div>
          </div>
        </li>
      </m-input-group>
    </ul>
     
    <p
      class="m-u--margin-bottom--l"
    >
      <button
        class="m-button m--is-skin-primary"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Submit 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
       
      <button
        class="m-button m--is-skin-secondary"
        type="reset"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Reset 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </p>
  </form>
</div>
`;

exports[`Storyshots components|m-form/rules Email confirmation 1`] = `
<div>
  <h2>
    Email confirmation
  </h2>
   
  <form
    class="m-u--margin-top"
  >
    <!---->
     
    <!---->
     
    <m-input-group
      legend=""
    >
      <div
        class="m-textfield m--has-label m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--has-label m--is-tag-default"
        >
          <div
            class="m-input-style__content"
            style="margin-top: 10px;"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-uuid"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Email
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__body"
            >
              <!---->
               
              <div
                class="m-input-style__left-content"
              >
                <input
                  class="m-textfield__input"
                  id="mTextfield-uuid"
                  maxlength="Infinity"
                  type="text"
                />
                  
                <!---->
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__right-content"
              >
                <span
                  style="white-space: nowrap;"
                />
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-textfield m--has-label m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--has-label m--is-tag-default"
        >
          <div
            class="m-input-style__content"
            style="margin-top: 10px;"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-uuid"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Email confirmation
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__body"
            >
              <!---->
               
              <div
                class="m-input-style__left-content"
              >
                <input
                  class="m-textfield__input"
                  id="mTextfield-uuid"
                  maxlength="Infinity"
                  type="text"
                />
                  
                <!---->
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__right-content"
              >
                <span
                  style="white-space: nowrap;"
                />
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
    </m-input-group>
     
    <p
      class="m-u--margin-bottom--l"
    >
      <button
        class="m-button m--is-skin-primary"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Submit 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
       
      <button
        class="m-button m--is-skin-secondary"
        type="reset"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Reset 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </p>
  </form>
</div>
`;

exports[`Storyshots components|m-form/rules Format with fixed max characters (postal code) 1`] = `
<div>
  <h2>
    Format with fixed max characters (postal code)
  </h2>
   
  <form
    class="m-u--margin-top"
  >
    <!---->
     
    <!---->
     
    <div
      class="m-textfield m--has-label m--is-type-text"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style m--has-label m--is-tag-default"
      >
        <div
          class="m-input-style__content"
          style="margin-top: 10px;"
        >
          <label
            class="m-input-style__label"
            for="mTextfield-uuid"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Postal code
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__body"
          >
            <!---->
             
            <div
              class="m-input-style__left-content"
            >
              <input
                class="m-textfield__input"
                id="mTextfield-uuid"
                maxlength="Infinity"
                type="text"
              />
                
              <!---->
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__right-content"
            >
              <span
                style="white-space: nowrap;"
              />
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-textfield__validation"
      >
        <div
          class="m-validation-message m-textfield__validation__message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <p
      class="m-u--margin-bottom--l"
    >
      <button
        class="m-button m--is-skin-primary"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Submit 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
       
      <button
        class="m-button m--is-skin-secondary"
        type="reset"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Reset 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </p>
  </form>
</div>
`;

exports[`Storyshots components|m-form/rules Format without fixed max characters (email) 1`] = `
<div>
  <h2>
    Format without fixed max characters (email)
  </h2>
   
  <form
    class="m-u--margin-top"
  >
    <!---->
     
    <!---->
     
    <div
      class="m-textfield m--has-label m--is-type-text"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style m--has-label m--is-tag-default"
      >
        <div
          class="m-input-style__content"
          style="margin-top: 10px;"
        >
          <label
            class="m-input-style__label"
            for="mTextfield-uuid"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Email
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__body"
          >
            <!---->
             
            <div
              class="m-input-style__left-content"
            >
              <input
                class="m-textfield__input"
                id="mTextfield-uuid"
                maxlength="Infinity"
                type="text"
              />
                
              <!---->
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__right-content"
            >
              <span
                style="white-space: nowrap;"
              />
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-textfield__validation"
      >
        <div
          class="m-validation-message m-textfield__validation__message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <p
      class="m-u--margin-bottom--l"
    >
      <button
        class="m-button m--is-skin-primary"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Submit 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
       
      <button
        class="m-button m--is-skin-secondary"
        type="reset"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Reset 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </p>
  </form>
</div>
`;

exports[`Storyshots components|m-form/rules Live check username availability (async) 1`] = `
<div>
  <h2>
    Live check username availability (async)
  </h2>
   
  <p>
    'John', 'Jane' and 'Doe' are reserved
  </p>
   
  <form
    class="m-u--margin-top"
  >
    <!---->
     
    <!---->
     
    <div
      class="m-textfield m--has-label m--is-type-text"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style m--has-label m--is-tag-default"
      >
        <div
          class="m-input-style__content"
          style="margin-top: 10px;"
        >
          <label
            class="m-input-style__label"
            for="mTextfield-uuid"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Username
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__body"
          >
            <!---->
             
            <div
              class="m-input-style__left-content"
            >
              <input
                class="m-textfield__input"
                id="mTextfield-uuid"
                maxlength="Infinity"
                type="text"
              />
                
              <!---->
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__right-content"
            >
              <span
                style="white-space: nowrap;"
              />
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-textfield__validation"
      >
        <div
          class="m-validation-message m-textfield__validation__message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <p
      class="m-u--margin-bottom--l"
    >
      <button
        class="m-button m--is-skin-primary"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Submit 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
       
      <button
        class="m-button m--is-skin-secondary"
        type="reset"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Reset 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </p>
  </form>
</div>
`;

exports[`Storyshots components|m-form/rules More than one validations (course code) 1`] = `
<div>
  <h2>
    More than one validations (course code)
  </h2>
   
  <p>
    'MAT-0000' and 'MAT-0001' are reserved
  </p>
   
  <form
    class="m-u--margin-top"
  >
    <!---->
     
    <!---->
     
    <div
      class="m-textfield m--has-label m--is-type-text"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style m--has-label m--is-tag-default"
      >
        <div
          class="m-input-style__content"
          style="margin-top: 10px;"
        >
          <label
            class="m-input-style__label"
            for="mTextfield-uuid"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Course code (ex. : MAT-1000)
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__body"
          >
            <!---->
             
            <div
              class="m-input-style__left-content"
            >
              <input
                class="m-textfield__input"
                id="mTextfield-uuid"
                maxlength="Infinity"
                type="text"
              />
                
              <!---->
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__right-content"
            >
              <span
                style="white-space: nowrap;"
              />
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-textfield__validation"
      >
        <div
          class="m-validation-message m-textfield__validation__message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <p
      class="m-u--margin-bottom--l"
    >
      <button
        class="m-button m--is-skin-primary"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Submit 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
       
      <button
        class="m-button m--is-skin-secondary"
        type="reset"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Reset 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </p>
  </form>
</div>
`;

exports[`Storyshots components|m-form/rules Radio button required 1`] = `
<div>
  <h2>
    Radio button required
  </h2>
   
  <form
    class="m-u--margin-top"
  >
    <!---->
     
    <!---->
     
    <div
      class="m-radio-group"
    >
      <p
        class="m-radio-group__label"
        id="uuid"
      >
        <span>
          Select a role :
        </span>
         
        <span
          class="m-radio-group__icon"
        />
      </p>
       
      <div
        class="m-validation-message m-radio-group__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <ul
        aria-labelledby="uuid"
        class="m-radio-group__body"
        role="radiogroup"
      >
        <li
          class="m-radio"
        >
          <input
            class="m-radio__hidden"
            id="uuid"
            name="uuid"
            type="radio"
            value="Sys admin"
          />
           
          <label
            class="m-radio__wrap"
            for="uuid"
          >
            <span
              aria-hidden="true"
              class="m-radio__input"
            />
             
            <span
              class="m-radio__label"
            >
              Sys admin
            </span>
          </label>
        </li>
         
        <li
          class="m-radio"
        >
          <input
            class="m-radio__hidden"
            id="uuid"
            name="uuid"
            type="radio"
            value="Unit admin"
          />
           
          <label
            class="m-radio__wrap"
            for="uuid"
          >
            <span
              aria-hidden="true"
              class="m-radio__input"
            />
             
            <span
              class="m-radio__label"
            >
              Unit admin
            </span>
          </label>
        </li>
         
        <li
          class="m-radio"
        >
          <input
            class="m-radio__hidden"
            id="uuid"
            name="uuid"
            type="radio"
            value="Conceptor"
          />
           
          <label
            class="m-radio__wrap"
            for="uuid"
          >
            <span
              aria-hidden="true"
              class="m-radio__input"
            />
             
            <span
              class="m-radio__label"
            >
              Conceptor
            </span>
          </label>
        </li>
         
        <li
          class="m-radio"
        >
          <input
            class="m-radio__hidden"
            id="uuid"
            name="uuid"
            type="radio"
            value="Assistant"
          />
           
          <label
            class="m-radio__wrap"
            for="uuid"
          >
            <span
              aria-hidden="true"
              class="m-radio__input"
            />
             
            <span
              class="m-radio__label"
            >
              Assistant
            </span>
          </label>
        </li>
         
        <li
          class="m-radio"
        >
          <input
            class="m-radio__hidden"
            id="uuid"
            name="uuid"
            type="radio"
            value="Student"
          />
           
          <label
            class="m-radio__wrap"
            for="uuid"
          >
            <span
              aria-hidden="true"
              class="m-radio__input"
            />
             
            <span
              class="m-radio__label"
            >
              Student
            </span>
          </label>
        </li>
      </ul>
    </div>
     
    <p
      class="m-u--margin-bottom--l"
    >
      <button
        class="m-button m--is-skin-primary"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Submit 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
       
      <button
        class="m-button m--is-skin-secondary"
        type="reset"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Reset 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </p>
  </form>
</div>
`;

exports[`Storyshots components|m-form/rules required and 5 characters min 1`] = `
<div>
  <h2>
    Required and 5 characters min
  </h2>
   
  <form
    class="m-u--margin-top"
  >
    <!---->
     
    <!---->
     
    <div
      class="m-textfield m--has-label m--is-type-text"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style m--has-label m--is-tag-default"
      >
        <div
          class="m-input-style__content"
          style="margin-top: 10px;"
        >
          <label
            class="m-input-style__label"
            for="mTextfield-uuid"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Security answer
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__body"
          >
            <!---->
             
            <div
              class="m-input-style__left-content"
            >
              <input
                class="m-textfield__input"
                id="mTextfield-uuid"
                maxlength="Infinity"
                type="text"
              />
                
              <!---->
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__right-content"
            >
              <span
                style="white-space: nowrap;"
              />
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-textfield__validation"
      >
        <div
          class="m-validation-message m-textfield__validation__message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <p
      class="m-u--margin-bottom--l"
    >
      <button
        class="m-button m--is-skin-primary"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Submit 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
       
      <button
        class="m-button m--is-skin-secondary"
        type="reset"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Reset 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </p>
  </form>
</div>
`;

exports[`Storyshots components|m-form/rules required and 20 characters max 1`] = `
<div>
  <h2>
    Required and 20 characters max
  </h2>
   
  <form
    class="m-u--margin-top"
  >
    <!---->
     
    <!---->
     
    <div
      class="m-textfield m--has-label m--is-type-text"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style m--has-label m--is-tag-default"
      >
        <div
          class="m-input-style__content"
          style="margin-top: 10px;"
        >
          <label
            class="m-input-style__label"
            for="mTextfield-uuid"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Title
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__body"
          >
            <!---->
             
            <div
              class="m-input-style__left-content"
            >
              <input
                class="m-textfield__input"
                id="mTextfield-uuid"
                maxlength="Infinity"
                type="text"
              />
                
              <!---->
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__right-content"
            >
              <span
                style="white-space: nowrap;"
              />
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-textfield__validation"
      >
        <div
          class="m-validation-message m-textfield__validation__message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <p
      class="m-u--margin-bottom--l"
    >
      <button
        class="m-button m--is-skin-primary"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Submit 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
       
      <button
        class="m-button m--is-skin-secondary"
        type="reset"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          Reset 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </p>
  </form>
</div>
`;

exports[`Storyshots components|m-form/validation-type at-exit 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <p>
    edition context: none
  </p>
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/validation-type correction 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <p>
    edition context: none
  </p>
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/validation-type modification 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <p>
    edition context: none
  </p>
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots components|m-form/validation-type on-going 1`] = `
<form
  class="m-u--margin-top"
>
  <!---->
   
  <!---->
   
  <p>
    edition context: none
  </p>
   
  <div
    class="m-textfield m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p
    class="m-u--margin-bottom--l"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;
